# speechmetryflow

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  index.html  main.nf  nextflow.config  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
audio/opensmile/: index.html
audio/parselmouth/: index.html
audio/uhmometer/: index.html
changelog/: index.html
configs/: apptainer.config
container/: build.sh  container.def
containers/: build.sh
containers/lingualabpy/: env.txt  recipe.def
containers/opensmile/: env.txt  recipe.def
containers/praat/: env.txt  recipe.def
containers/speechmetryflow/: env.txt  recipe.def
containers/whisper/: env.txt  recipe.def
docs/: Makefile  mkdocs.yml
docs/docs/: changelog.md  features-extractions.md  features-fluency.md  features-phonetics.md  getting-started.md  index.md  installation.md  lingualab-audio-phonetics.md  lingualab-text-semantic.md
en/lingualab-audio-phonetic/: index.html
en/lingualab-audio-phonetics/: index.html
en/lingualab-text-lexical/: index.html
en/lingualab-text-pragmatic/: index.html
en/lingualab-text-production/: index.html
en/lingualab-text-semantic/: index.html
en/lingualab-text-syntaxic/: index.html
en/opensmile-audio/: index.html
features-extractions/: index.html
features-fluency/: index.html
features-phonetics/: index.html
getting-started/: index.html
installation/: index.html
lingualab-audio-phonetics/: index.html
lingualab-text-lexical/: index.html
lingualab-text-pragmatic/: index.html
lingualab-text-production/: index.html
lingualab-text-semantic/: index.html
lingualab-text-syntaxic/: index.html
modules/: utils.nf
paper/: paper.bib  paper.md
search/: search_index.json
tests/: conftest.py  test_lexical.py  test_pragmatic.py  test_semantic.py  test_speech_production.py  test_syntactic.py
text/: lexical.csv  pragmatic.csv  semantic.csv  speech-production.csv  syntaxic.csv
(+73 files in other folders)
